# video_gen

./: .gitignore  AGENTS.md  Dockerfile  PRODUCT_PLAN.md  README.md  package.json  pyproject.toml
app/: __init__.py
app/backend/: __init__.py  alerts.py  api.py  comfy.py  errors.py  generation_config.py  models.py  oauth.py  payout.py  queue.py  repository.py  runtime_config.py  service.py  storage.py  worker.py  workflows.py
comfyui_plugin/: __init__.py  installer.py
comfyui_plugin/video_gen_platform_nodes/: README.md  __init__.py
deploy/: docker-compose.yml  env.example
deploy/systemd/: video-gen-api.service  video-gen-arq-worker.service  video-gen-ops-worker.service  video-gen-ops-worker.timer
frontend/: app.js  index.html  styles.css
frontend-next/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend-next/app/: globals.css  layout.tsx  page.tsx
frontend-next/components/: account-panel.tsx  admin-review-panel.tsx  admin-shell.tsx  app-shell.tsx  author-profile-panel.tsx  billing-panel.tsx  canvas-workspace.tsx  create-workbench.tsx  oauth-callback-panel.tsx  panel-title.tsx  platform-dashboard.tsx  project-workspace.tsx  review-status.tsx  template-market.tsx  template-marketplace.tsx  work-detail.tsx  work-gallery.tsx  workspace-panel.tsx
frontend-next/lib/: api.ts  fallback-data.ts  same-style-create.ts  (+2 more)
tests/: frontend.test.mjs  frontend_next.test.mjs  next_runtime_smoke.mjs  test_api.py  test_comfy_client.py  test_comfyui_plugin.py  test_deployment.py  test_oauth.py  test_platform_service.py  test_workflows.py
(+19 files in other folders)
