[project]
name = "video-gen-platform"
version = "0.1.0"
description = "基于 ComfyUI 的中文短视频/漫剧制作平台"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]
queue = [
  "arq>=0.26.0",
]
postgres = [
  "psycopg[binary]>=3.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
